# openstack-haskell

./: README.markdown  openstack-haskell.cabal
lib/Cloud/OpenStack/: Internal.hs  Keystone.hs  Nova.hs
tests/: Experiment.hs
