name:                openstack-haskell
version:             0.1.0.0
synopsis:            Manipulate OpenStack from Haskell
homepage:            https://github.com/anchor/openstack-haskell
license:             MIT
license-file:        LICENSE
author:              Sharif Olorin, Andrew Cowie
maintainer:          engineering@anchor.net.au
copyright:           2014 Anchor Systems   
category:            System
build-type:          Simple
extra-source-files:  README.markdown
cabal-version:       >= 1.20

library
  exposed-modules:   Cloud.OpenStack
  other-modules:     Cloud.OpenStack.Nova.Version2,
                     Cloud.OpenStack.Identity.Version2

  build-depends:     base >=4.7 && <4.8,
                     network-uri,
                     text,
                     uuid,
                     bytestring,
                     aeson,
                     time
  hs-source-dirs:    lib
  default-language:  Haskell2010

-- vim: set tabstop=21 expandtab:
